Fixed line jump detection in display

--- a/src/preprocessor/style.scss
+++ b/src/preprocessor/style.scss
@@ -58,7 +58,8 @@ $side-section-border-radius: 5px;
 .codeDisplay {
   border-style: solid;
   border-width: 1px;
-  padding-left: 1px; 
+  padding-left: 1px;
+  white-space: pre-wrap; /* Allows line jump detection */
 }
 
 
